<resources>
    <string name="app_name">Coronavirus Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_countries">Countries</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_news">News</string>
    <string name="menu_sources">Sources</string>
    <string name="menu_about">About</string>
</resources>
