<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_countries"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_countries" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/menu_news" />
    </group>

    <item android:title="Info">
        <menu>
            <item
                android:id="@+id/nav_sources"
                android:icon="@drawable/ic_link_black_24dp"
                android:title="@string/menu_sources" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
