<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.starenkysoftware.coronavirus_tracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_countries"
        android:name="com.starenkysoftware.coronavirus_tracker.ui.countries.CountriesFragment"
        android:label="@string/menu_countries"
        tools:layout="@layout/fragment_countries" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.starenkysoftware.coronavirus_tracker.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.starenkysoftware.coronavirus_tracker.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_sources"
        android:name="com.starenkysoftware.coronavirus_tracker.ui.sources.SourcesFragment"
        android:label="@string/menu_sources"
        tools:layout="@layout/fragment_sources" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.starenkysoftware.coronavirus_tracker.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>